syntax = "proto3";

package authorization;
option go_package="auth.grpc;grpc";

service Authorization {
    rpc Register (RequestRegister) returns (ResponseToken);
    rpc Login (RequestLogin) returns (ResponseToken);
}

service Session {
    rpc Refresh (RequestRefresh) returns (ResponseToken);
    rpc Logout (RequestLogout) returns (ResponseLogout);
    rpc Info(RequstInfo) returns (ResponseInfo);
}

message RequestRegister {
    string login = 1;
    string password = 2;
    string email = 3;
    string client = 4;
    string role = 5;
}
message RequestLogin {
    string login = 1;
    string password = 2;
}
message RequestRefresh {
    string refresh = 1;
}

message Tokens {
    string refresh = 1;
    string access = 2;
}
message ResponseToken {
    string status = 1;
    string message = 2;
    Tokens tokens = 3;
}

message RequestLogout {
    string refresh = 1;
}
message ResponseLogout {
    string status = 1;
    string message = 2;
}

message RequstInfo {
    string access = 1;
}
message ResponseInfo {
    string status = 1;
    string message = 2;
    User user = 3;
}
message User {
    int64 user_id = 1; 
    string login = 2;
    string email = 3;
    string role = 4;
}